hphp/test/slow/parser/semi-reserved-keywords/type_const_bad.php.expectf
Fatal error: syntax error, unexpected T_AS in %stest/slow/parser/semi-reserved-keywords/type_const_bad.php on line 4
